--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,7 +6,7 @@
 html {
   font-size: clamp(1rem, 0.2vw + 1rem, 1.375rem);
   scroll-behavior: smooth;
-  scroll-padding-top: 4.8rem;
+  scroll-padding-top: 5rem;
 }
 
 body {
